<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.myapp.ui.intentt.MainActivity">


    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt1"
        android:inputType="number"
        android:id="@+id/txt1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/btn"
        android:id="@+id/button" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_name"
        android:id="@+id/et_name"
        />
    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_email"
        android:inputType="textEmailAddress"
        android:id="@+id/et_email"

        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/preess"
        android:id="@+id/button22"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/log"
        android:id="@+id/btnlog"
        />

    <EditText
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:id="@+id/txt2"
        android:hint="@string/tv2"
        />
</LinearLayout>
