<?xml version="1.0" encoding="utf-8"?>


<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="0,1,2"
    tools:context="com.myapp.ui.Widgets.Tablelayout">


    <TableRow android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:text="@string/first"
            android:gravity="center"
            android:textColor="@color/black"
            android:background="@color/red"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <TextView
            android:layout_column="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:text="@string/second"
            android:gravity="center"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:layout_weight="1"/>


    </TableRow>




    <TableRow android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:background="@color/black"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:layout_weight="1"/>

    </TableRow>


    <TableRow android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/fourth"
            android:gravity="center"
            android:background="@color/green"
            android:layout_column="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:layout_weight="1"/>

    </TableRow>


    <TableRow android:layout_weight="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_column="2"
            android:text="@string/fifth"
            android:gravity="center"
            android:background="@color/pink"/>

    </TableRow>
























</TableLayout>
